--- a/41.html
+++ b/41.html
@@ -3,21 +3,19 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"Dann zieh sofort das Herz zurück!"</p>
+      <p style="text-align:left;">"Sehr nah dran. Aber doch etwas KONKRETER."</p>
+      <p style="text-align:right;">"Lampe ist ja nur ein ungenauer Überbegriff."</p>
+      <p style="text-align:center;">"Nein, das Rätsel stand schon vor 3 Tagen. Wollte was einfaches."</p>
+      <p style="text-align:left;">"Nicht schlecht, aber es macht mich auch wütend"</p>
+    </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/40" style=color:rgb(205,127,50)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/42" style=color:rgb(205,127,50)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
