--- a/42.html
+++ b/42.html
@@ -7,7 +7,8 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="42.jpg" alt="quest image" style="height:90vh;">
+        <img src="42.jpg" alt="quest image" style="height:70vh;">
+        <p style="font-size:200%; text-align:center;">Aus-Tral-Iaah</p>
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/41" style=color:rgb(205,127,50)>&lt</a>
