--- a/43.html
+++ b/43.html
@@ -6,18 +6,15 @@
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+        <img src="43.jpg" alt="quest image" style="width:90vw;">
+        <p style="font-size:200%; text-align:center;">Australia (Baz Luhrmann, 2008)</p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/42" style=color:rgb(205,127,50)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/44" style=color:rgb(205,127,50)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
