--- a/40.html
+++ b/40.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="40.jpg" alt="quest image" style="heigth:90vh;">
+        <img src="40.jpg" alt="quest image" style="height:90vh;">
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/39" style=color:rgb(205,127,50)>&lt</a>
