--- a/44.html
+++ b/44.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(33, 136, 143);
+}
+</style>
 </head>
 <html>
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+      <p style="color:rgb(205,127,50); font-size:20em;">
+      9
+      </p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/43" style=color:rgb(33,186,173)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/45" style=color:rgb(33,186,173)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
