--- a/46.html
+++ b/46.html
@@ -3,21 +3,19 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"Sieh: Benz-Werke! Männer allein, I'm Walt"</p>
+      <p style="text-align:left;">"Sehr nah dran. Aber doch etwas KONKRETER."</p>
+      <p style="text-align:right;">"BITTE NICHT MEHR MARKIEREN!"</p>
+      <p style="text-align:center;">"Nur ein allgegenwärtiger, höhnender Zwerg hatte mich scheinbar fertig gemacht."</p>
+      <p style="text-align:left;">"Es ist fast Weihnachten, also kümmere ich mich mal um die Ausgeschlossenen"</p>
+    </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/40" style=color:rgb(33,186,173)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/42" style=color:rgb(33,186,173)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
