--- a/48.html
+++ b/48.html
@@ -6,18 +6,15 @@
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+        <img src="48.jpg" alt="quest image" style="width:80vw;">
+        <p style="font-size:200%; text-align:center;">Mädchen mit Gewalt (Roger Fritz, 1970)</p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/47" style=color:rgb(33,186,173)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/49" style=color:rgb(33,186,173)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
