--- a/46.html
+++ b/46.html
@@ -6,7 +6,7 @@
     <body>
     <div class="quotes">
       <p style="text-align:center;">"Sieh: Benz-Werke! Männer allein, I'm Walt"</p>
-      <p style="text-align:left;">"Sehr nah dran. Aber doch etwas KONKRETER."</p>
+      <p style="text-align:left;">"Nun kommt es noch aufs Wie an."</p>
       <p style="text-align:right;">"BITTE NICHT MEHR MARKIEREN!"</p>
       <p style="text-align:center;">"Nur ein allgegenwärtiger, höhnender Zwerg hatte mich scheinbar fertig gemacht."</p>
       <p style="text-align:left;">"Es ist fast Weihnachten, also kümmere ich mich mal um die Ausgeschlossenen"</p>
