--- a/48.html
+++ b/48.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="48.jpg" alt="quest image" style="width:80vw;">
+        <img src="48.jpg" alt="quest image" style="height:70vh;">
         <p style="font-size:200%; text-align:center;">Mädchen mit Gewalt (Roger Fritz, 1970)</p>
       </div>
       <div class="pfeilr">
