--- a/49.html
+++ b/49.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(229, 183gdi);
+}
+</style>
 </head>
 <html>
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+      <p style="color:rgb(229,183,255); font-size:20em;">
+      10
+      </p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/48" style=color:rgb(229,183,255)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/50" style=color:rgb(229,224,255)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
