--- a/49.html
+++ b/49.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 <style>
 body {
-  background-color: rgb(229, 183gdi);
+  background-color: rgb(229, 183, 255);
 }
 </style>
 </head>
@@ -12,12 +12,12 @@ body {
     </head>
     <body>
       <div class="qbild">
-      <p style="color:rgb(229,183,255); font-size:20em;">
+      <p style="color:rgb(229,224,255); font-size:20em;">
       10
       </p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/48" style=color:rgb(229,183,255)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/48" style=color:rgb(229,224,255)>&lt</a>
       </div>
       <div class="pfeil">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/50" style=color:rgb(229,224,255)>&gt</a>
