--- a/51.html
+++ b/51.html
@@ -3,21 +3,19 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"In China essen .. oh, zu spät"</p>
+      <p style="text-align:left;">"Mehr Filme kenne ich leider nicht"</p>
+      <p style="text-align:right;">"Supertipp: Was sind Hunde?"</p>
+      <p style="text-align:center;">"der raue ton hier, wie in der hafenkneipe"</p>
+      <p style="text-align:left;">"Warte ich staube schnell ab"</p>
+    </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/50" style=color:rgb(33,186,173)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/52" style=color:rgb(33,186,173)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
